--- a/ProjetoAplicativo/package.json
+++ b/ProjetoAplicativo/package.json
@@ -14,13 +14,19 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^10.1.1",
-    "cordova-browser": "^6.0.0"
+    "cordova-browser": "^6.0.0",
+    "cordova-plugin-camera": "github:apache/cordova-plugin-camera"
   },
   "cordova": {
     "platforms": [
       "browser",
       "android"
-    ]
+    ],
+    "plugins": {
+      "cordova-plugin-camera": {
+        "ANDROIDX_CORE_VERSION": "1.6.+"
+      }
+    }
   },
   "dependencies": {
     "gradle": "^1.2.4",
